2006-02-20  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* pitivi.spec.in:
	We need PyCairo now, update this for configure and packagers.

2006-02-17  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/complexsource.py:
	* pitivi/ui/tracklayer.py:
	* pitivi/ui/viewer.py:
	I think I finally understood cairo :)

2006-02-16  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/Makefile.am:
	* pitivi/ui/complexlayer.py:
	* pitivi/ui/complexstack.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/infolayer.py:
	* pitivi/ui/layerwidgets.py:
	* pitivi/ui/tracklayer.py:
	Split up files, clean up, make timeline design v2 work more efficiently.

2006-02-14  Edward Hervey  <edward@fluendo.com>

	* bin/pitivi.in:
	Use '/usr/bin/env python' instead of '/usr/bin/python'.
	Closes (#330579)

2006-02-09  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline.py:
	Wow, how long did this stay in for ??
	
	* pitivi/ui/Makefile.am:
	* pitivi/ui/complexinterface.py:
	* pitivi/ui/complexlayer.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/complexstack.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/layerwidgets.py:
	* pitivi/ui/ruler.py:
	* pitivi/ui/timeline.py:
	Complex Timeline Design #2
	Less code, looks better, works faster.
	Still has code to remove/refactor

2006-02-07  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/complexinterface.py:
	* pitivi/ui/complexlayer.py:
	* pitivi/ui/complexstack.py:
	* pitivi/ui/mainwindow.py:
	Use gtk.SizeGroup to synchronize layers' height.
	Don't maximize on startup.

2006-02-06  Edward Hervey  <edward@fluendo.com>

	* MAINTAINERS:
	* Makefile.am:
	Added maintainers file in order to have proper pitivi-main@gnome.org.
	Welcome PiTiVi to gnome.org :)

2006-02-06  Edward Hervey  <edward@fluendo.com>

	* pitivi/check.py:
	Added check for autodetect plugins existence.

	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/effects.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/settings.py: